--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+#Prevents sensitive data from being pushed
+/PortfolioMVC.UI.MVC/appsettings.json 
