updated some content

--- a/PortfolioMVC.UI.MVC/PortfolioMVC.UI.MVC.csproj
+++ b/PortfolioMVC.UI.MVC/PortfolioMVC.UI.MVC.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-PortfolioMVC.UI.MVC-926981b0-3554-4c05-8125-6c4781f9f2e6</UserSecretsId>
+	  <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
